@@ -37,6 +37,8 @@ Enhancements since 1.6
   This provides a direct conversion to JDK Date which handles DST and
   time zone data differences
 
+- DateTime constructors without seconds/millis [1982629]
+
 
 Compatibility with 1.6
 ----------------------
